# tec-final-assessment

./: .gitignore  AGENTS.md  DOCS.md  DOCUMENTACION.md  ITChat_Presentacion.pptx  LICENSE  README.md  execution details.md  package-lock.json  pyproject.toml
backend/: .env.example  README.md  pyproject.toml
backend/src/: app.py  auth.py  chat.py  config.py  db.py  main.py  ml_client.py  realtime.py  schemas.py  service_auth.py
backend/src/scripts/: train_model.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_chat_api.py  test_features.py  test_predictor.py  test_service_auth.py
cloud/: gjm-back1-cloud-init.txt  gjm-db-cloud-init.txt  gjm-front-cloud-init.txt  gjm-lb-cloud-init.txt  gjm-lb-nginx.conf
data/: dataset.csv
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  config.ts  main.tsx  types.ts
frontend/src/api/: chat.ts  predict.ts
frontend/src/components/: Avatar.css  Avatar.tsx  ChatWindow.css  ChatWindow.tsx  Message.css  Message.tsx  ThemeToggle.css  ThemeToggle.tsx  icons.tsx
frontend/src/hooks/: useRealtimeMessages.ts  useTheme.tsx  useWebSocket.ts
frontend/src/pages/: Dashboard.css  Dashboard.tsx  Login.css  Login.tsx
ml-service/: .env.example  README.md  pyproject.toml
ml-service/src/: app.py  config.py  main.py  schemas.py  service_auth.py
ml-service/src/ml/: __init__.py  features.py  predictor.py
ml-service/src/scripts/: train_model.py
ml-service/tests/: __init__.py  conftest.py  test_app.py  test_predictor.py
src/: config.py
src/ml/: __init__.py  features.py  predictor.py
src/scripts/: train_model.py
