[project]
name = "ml-service"
version = "0.1.0"
description = "FastAPI ML inference and training service for ITChat"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "pandas>=2.2.0",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
main = "src.main:main"
train-sms-model = "src.scripts.train_model:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
